--- a/packages/jest-selectors/package.json
+++ b/packages/jest-selectors/package.json
@@ -10,8 +10,6 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "publishConfig": {
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
     "access": "public"
   },
   "repository": {
@@ -27,7 +25,7 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "clean": "rimraf ./dist ./compiled ./package.tgz",
+    "clean": "rimraf ./dist",
     "typecheck": "tsc --emitDeclarationOnly false --noEmit",
     "prettier": "prettier . --write",
     "prepack":"npm run clean & npm run build"
