--- a/packages/jest-selectors/package.json
+++ b/packages/jest-selectors/package.json
@@ -10,6 +10,8 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "publishConfig": {
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "access": "public"
   },
   "repository": {
