--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,9 +5,12 @@
   "main": "dist/index.js",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
+    "@swc/core": "^1.3.96",
+    "@swc/jest": "^0.2.29",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@types/jest": "^29.5.8",
+    "@types/node": "^20.9.1",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@volkovlabs/eslint-config": "^1.0.0",
     "@volkovlabs/jest-selectors": "^1.2.0",
@@ -16,6 +19,8 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +29,8 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "util": "^0.12.5"
   },
   "scripts": {
     "build": "rollup -c",
@@ -33,7 +39,9 @@
     "prettier": "prettier . --write",
     "typecheck": "tsc --emitDeclarationOnly false --noEmit",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest --watch --onlyChanged",
+    "test:ci": "jest --maxWorkers 4 --coverage"
   },
   "author": "Volkov Labs",
   "license": "Apache-2.0",
