--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -11,5 +11,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-  }
+  },
+  "include": ["./src", "./types", "./jest-setup.ts"]
 }
