--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -38,8 +38,8 @@
     "prepack": "npm run clean & npm run build",
     "prettier": "prettier . --write",
     "typecheck": "tsc --emitDeclarationOnly false --noEmit",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
     "test": "jest --watch --onlyChanged",
     "test:ci": "jest --maxWorkers 4 --coverage"
   },
