--- a/packages/jest-selectors/package.json
+++ b/packages/jest-selectors/package.json
@@ -51,7 +51,8 @@
     "prettier": "prettier . --write",
     "typecheck": "tsc --emitDeclarationOnly false --noEmit",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test:ci": ""
   },
   "types": "dist/index.d.ts",
   "version": "1.2.0"
