--- a/packages/components/.eslintrc
+++ b/packages/components/.eslintrc
@@ -2,7 +2,7 @@
   "env": {
     "jest": true
   },
-  "extends": ["plugin:prettier/recommended", "@volkovlabs/eslint-config"],
+  "extends": ["plugin:prettier/recommended", "@volkovlabs/eslint-config", "plugin:storybook/recommended"],
   "plugins": ["@typescript-eslint/eslint-plugin"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
