--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,6 +5,15 @@
   "main": "dist/index.js",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/client-api": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/react-webpack5": "^7.5.3",
+    "@storybook/testing-library": "^0.2.2",
     "@swc/core": "^1.3.96",
     "@swc/jest": "^0.2.29",
     "@testing-library/jest-dom": "^6.1.4",
@@ -19,6 +28,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.0",
@@ -28,6 +38,8 @@
     "rollup": "^4.4.1",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.0",
+    "storybook": "^7.5.3",
+    "storybook-dark-mode": "^3.0.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "util": "^0.12.5"
@@ -41,7 +53,9 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\" --fix",
     "test": "jest --watch --onlyChanged",
-    "test:ci": "jest --maxWorkers 4 --coverage"
+    "test:ci": "jest --maxWorkers 4 --coverage",
+    "dev": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "Volkov Labs",
   "license": "Apache-2.0",
@@ -53,6 +67,7 @@
   ],
   "types": "dist/index.d.ts",
   "dependencies": {
+    "@grafana/data": "^10.2.1",
     "@grafana/ui": "^10.2.1"
   }
 }
