--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "volkovlabs-packages",
-  "version": "1.0.0",
   "description": "Public packages",
+  "name": "volkovlabs-packages",
   "packageManager": "^npm@9.0.0",
+  "scripts": {
+    "build": "npm run build --workspaces",
+    "lint": "npm run lint --workspaces",
+    "publish": "npm publish --workspaces",
+    "test:ci": "npm run test:ci --workspaces"
+  },
+  "version": "1.0.0",
   "workspaces": [
     "packages/eslint-config",
     "packages/jest-selectors",
     "packages/components"
-  ],
-  "scripts": {
-    "test:ci": "npm run test:ci --workspaces",
-    "lint": "npm run lint --workspaces",
-    "build": "npm run build --workspaces",
-    "publish": "npm publish --workspaces"
-  }
+  ]
 }
