--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ logs
 npm-debug.log*
 
 node_modules/
+packages/**/package-lock.json
 
 # Runtime data
 pids
@@ -23,6 +24,7 @@ artifacts/
 work/
 ci/
 e2e-results/
+storybook-static/
 
 # Editor
 .idea
