--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Volkov Labs",
   "dependencies": {
+    "@emotion/css": "^11.11.2",
     "@grafana/data": "^10.2.1",
     "@grafana/ui": "^10.2.1"
   },
@@ -36,8 +37,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.4.1",
     "rollup-plugin-dts": "^6.1.0",
@@ -60,6 +59,10 @@
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "name": "@volkovlabs/components",
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
   "publishConfig": {
     "access": "public",
     "main": "dist/index.js",
