--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "build": "",
-    "lint": "",
+    "lint": "eslint ./tests/*.ts -c ./tests/eslint.config.js",
     "test:ci": ""
   },
   "version": "1.1.0"
