Add ESLint naming convention rule (#10)
* Add eslint naming convention rule

* Finalize eslint naming convention rule

* ESLint Config 1.2.0

* Fix lint errors

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -29,8 +29,8 @@
   },
   "scripts": {
     "build": "",
-    "lint": "",
+    "lint": "eslint './tests/**/*.{ts,tsx}'",
     "test:ci": ""
   },
-  "version": "1.1.0"
+  "version": "1.2.0"
 }
