--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
+  "author": "Volkov Labs",
   "description": "Public packages",
   "name": "volkovlabs-packages",
   "packageManager": "^npm@9.0.0",
   "scripts": {
     "build": "npm run build --workspaces",
     "lint": "npm run lint --workspaces",
-    "publish": "npm publish --workspaces",
+    "publish:components": "npm publish -w packages/components",
+    "publish:eslint-config": "npm publish -w packages/eslint-config",
+    "publish:grafana-utils": "npm publish -w packages/grafana-utils",
+    "publish:jest-selectors": "npm publish -w packages/jest-selectors",
     "test:ci": "npm run test:ci --workspaces"
   },
-  "version": "1.0.0",
   "workspaces": [
     "packages/eslint-config",
     "packages/jest-selectors",
