--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "@grafana/data": "^10.2.1",
-    "@grafana/ui": "^10.2.1"
+    "@grafana/ui": "^10.2.1",
+    "rc-slider": "^10.5.0"
   },
   "description": "UI Components for Grafana",
   "devDependencies": {
@@ -82,5 +83,5 @@
     "typecheck": "tsc --emitDeclarationOnly false --noEmit"
   },
   "types": "dist/index.d.ts",
-  "version": "1.2.1"
+  "version": "1.3.3"
 }
