--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,7 +4,9 @@
     "@emotion/css": "^11.11.2",
     "@grafana/data": "^10.2.1",
     "@grafana/ui": "^10.2.1",
-    "rc-slider": "^10.5.0"
+    "classnames": "^2.5.1",
+    "rc-slider": "^10.5.0",
+    "rc-tooltip": "^6.2.0"
   },
   "description": "UI Components for Grafana",
   "devDependencies": {
