--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -11,6 +11,7 @@
   "description": "UI Components for Grafana",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
+    "@storybook/addon-actions": "^8.0.8",
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^7.5.3",
     "@storybook/addon-links": "^7.5.3",
@@ -20,7 +21,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^7.5.3",
     "@storybook/react-webpack5": "^7.5.3",
-    "@storybook/testing-library": "^0.2.2",
+    "@storybook/test": "^8.0.8",
     "@swc/core": "^1.3.96",
     "@swc/jest": "^0.2.29",
     "@testing-library/jest-dom": "^6.1.4",
@@ -85,5 +86,5 @@
     "typecheck": "tsc --emitDeclarationOnly false --noEmit"
   },
   "types": "dist/index.d.ts",
-  "version": "1.8.1"
+  "version": "1.8.2"
 }
