Add several esm output for client

--- a/packages/grafana-utils/package.json
+++ b/packages/grafana-utils/package.json
@@ -34,6 +34,7 @@
   "keywords": [],
   "license": "Apache-2.0",
   "main": "dist/client.js",
+  "module": "dist/esm/client.js",
   "name": "@volkovlabs/grafana-utils",
   "publishConfig": {
     "access": "public",
