--- a/packages/grafana-utils/package.json
+++ b/packages/grafana-utils/package.json
@@ -33,12 +33,13 @@
   ],
   "keywords": [],
   "license": "Apache-2.0",
-  "main": "dist/index.js",
+  "main": "dist/client.js",
+  "module": "dist/esm/client.js",
   "name": "@volkovlabs/grafana-utils",
   "publishConfig": {
     "access": "public",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts"
+    "main": "dist/client.js",
+    "types": "dist/client.d.ts"
   },
   "scripts": {
     "build": "rollup -c",
@@ -50,6 +51,6 @@
     "test:ci": "jest --maxWorkers 4 --coverage",
     "typecheck": "tsc --emitDeclarationOnly false --noEmit"
   },
-  "types": "dist/index.d.ts",
-  "version": "1.3.0"
+  "types": "dist/client.d.ts",
+  "version": "1.4.3"
 }
