--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,7 +10,7 @@
     "rc-slider": "^10.5.0",
     "rc-tooltip": "^6.2.0"
   },
-  "description": "UI Components for Grafana",
+  "description": "Business UI Components for Grafana",
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.4",
     "@storybook/addon-actions": "^8.0.8",
@@ -88,5 +88,5 @@
     "typecheck": "tsc --emitDeclarationOnly false --noEmit"
   },
   "types": "dist/index.d.ts",
-  "version": "2.7.1"
+  "version": "2.8.0"
 }
