--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,6 +4,7 @@
     "@emotion/css": "^11.11.2",
     "@grafana/data": "^11.1.0",
     "@grafana/runtime": "^11.1.0",
+    "@grafana/scenes": "^5.20.2",
     "@grafana/ui": "^11.1.0",
     "@volkovlabs/jest-selectors": "^1.5.0",
     "classnames": "^2.5.1",
