--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -11,7 +11,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["./src/@types/*"]
+    "typeRoots": ["node_modules/@types", "./src/@types"]
   },
   "include": ["./src", "./types", "./jest-setup.ts"]
 }
