--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "lint": "npm run lint --workspaces",
     "publish:components": "npm publish -w packages/components",
     "publish:eslint-config": "npm publish -w packages/eslint-config",
-    "publish:grafana-utils": "npm publish -w packages/grafana-utils",
     "publish:jest-selectors": "npm publish -w packages/jest-selectors",
     "test:ci": "npm run test:ci --workspaces"
   },
   "workspaces": [
     "packages/eslint-config",
     "packages/jest-selectors",
-    "packages/components",
-    "packages/grafana-utils"
+    "packages/components"
   ]
 }
