--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,14 +1,14 @@
 {
   "author": "Volkov Labs",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0"
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "typescript-eslint": "^8.37.0"
   },
   "description": "ESLint configuration",
   "files": [
-    "index.js",
+    "index.mjs",
     "./README.md",
     "./CHANGELOG.md",
     "./LICENSE"
@@ -18,19 +18,20 @@
     "config"
   ],
   "license": "Apache-2.0",
-  "main": "index.js",
+  "main": "index.mjs",
   "name": "@volkovlabs/eslint-config",
   "peerDependencies": {
-    "eslint": "^8.0.0"
+    "eslint": "^9.0.0"
   },
   "publishConfig": {
     "access": "public",
-    "main": "index.js"
+    "main": "index.mjs"
   },
   "scripts": {
     "build": "",
     "lint": "eslint './tests/**/*.{ts,tsx}'",
     "test:ci": ""
   },
-  "version": "1.3.0"
+  "version": "2.0.0",
+  "type": "module"
 }
